<resources>
    <string name="app_name">KHON</string>

    <string name="sp_text1">KHON</string>
    <string name="sp_text2">APPLICATION</string>
    <string name="navigation_draw_open">Open navigation drawer</string>
    <string name="navigation_draw_close">Close navigation drawer</string>

    <string name="main_s1">News</string>
    <string name="main_s2">SERVICES</string>

    <string name="demo_text">This is demo text waiting for WebPage.</string>

    <!-- Menu text -->
    <string name="menu1">Home</string>
    <string name="menu2">Detect from camera</string>
    <string name="menu3">Detect from gallery</string>
    <string name="menu4">AR</string>
    <string name="menu5">Communicate</string>
    <string name="menu6">Contact us</string>
    <string name="SlideText">Read more</string>

    <!-- Demo text -->
    <string name="new_title">Title</string>
    <string name="paragraph">Demo text</string>
    <string name="dummy_text">Dummy text</string>

    <string name="read_more">read-more</string>

    <!-- Demo text -->
    <string name="ar_toolbar">AR</string>
    <string name="news_toolbar">NEWS</string>
    <string name="location">สถานที่จัด :</string>
    <string name="event_list">event_list</string>
    <string name="contact_us">contact_us</string>
    <string name="camera">camera</string>
    <string name="gallery">gallery</string>
    <string name="preview_image">preview_image</string>
    <string name="progressbar_background">progressBar_background</string>
    <string name="calendar_noevent">No Event</string>
    <string name="btn_symbol">\?</string>
    <string name="event_calendar_decoration">event_calendar_decoration</string>
    <string name="event_popup_btn">event_popup_btn</string>
    <string name="event_image">event_image</string>
    <string name="detail">Detail</string>
    <string name="event_calendar">Event Calendar</string>
    <string name="contact_us_main">Contact us</string>
    <string name="overlay_img">overlay_img</string>
    <string name="option_bg">option_bg</string>
    <string name="detect_from_camera">Detect from camera</string>
    <string name="detect_from_gallery">Detect from gallery</string>
    <string name="news_slide_img">news_slide_img</string>
    <string name="information">รายละเอียด</string>
    <string name="more_info">อ่านเพิ่มเติม</string>
    <string name="new_img">new_img</string>
    <string name="no_event">No event</string>
    <string name="logo">logo</string>
    <string name="something_went_wrong_n_please_try_again">Something went wrong\n please try again</string>
</resources>
