<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Main_color_2"
    android:textAlignment="center">

    <androidx.cardview.widget.CardView
        android:id="@+id/calendarHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:elevation="10dp"
        app:cardCornerRadius="6dp">

        <com.applandeo.materialcalendarview.CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:eventsEnabled="true"
            app:headerColor="@color/Main_color_2"
            app:selectionColor="@color/Main_color_2"
            app:todayLabelColor="@color/today_color"
            app:type="one_day_picker" />

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/event_detail_popup"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="20dp"
        android:background="@drawable/circle_btn_before"
        android:backgroundTint="@color/Main_color_1"
        android:backgroundTintMode="src_over"
        android:contentDescription="@string/event_popup_btn"
        android:scaleType="center"
        android:src="@drawable/ic_arrow_upward_black_24dp" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:layout_below="@id/calendarHolder"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/round_dialog"
        android:elevation="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="0dp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="245dp"
        app:layout_anchorGravity="bottom|center_horizontal"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/decoration"
                android:layout_width="120dp"
                android:layout_height="5dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_btn"
                android:backgroundTint="@color/Main_color_2"
                android:contentDescription="@string/event_calendar_decoration" />

            <androidx.cardview.widget.CardView
                android:id="@+id/title_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/decoration"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                app:cardCornerRadius="6dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/event_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="15dp"
                        android:text="@string/calendar_noevent"
                        android:textAlignment="textStart"
                        android:textColor="@color/all_text_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/event_title"
                        android:layout_marginStart="5dp"
                        android:text="@string/location"
                        android:textColor="@color/all_text_color"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/location_r"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/event_title"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="20dp"
                        android:layout_toEndOf="@id/location"
                        android:text="@string/demo_text"
                        android:textColor="@color/all_text_color"
                        android:textSize="18sp"
                        android:visibility="gone" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/event_img_holder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_container"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                app:cardCornerRadius="6dp">

                <ImageView
                    android:id="@+id/event_img"
                    android:layout_width="300dp"
                    android:layout_height="400dp"
                    android:contentDescription="@string/event_image"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_launcher_background"
                    android:visibility="gone" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/information_holder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/event_img_holder"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="5dp"
                android:visibility="gone"
                app:cardCornerRadius="6dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/information"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/information"
                        android:textColor="@color/all_text_color"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/line"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_below="@id/information"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/all_text_color"
                        android:textColor="@color/all_text_color"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/event_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/information"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/demo_text"
                        android:textColor="@color/all_text_color"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/line_2"
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_below="@id/event_description"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/all_text_color"
                        android:textColor="@color/all_text_color"
                        android:textSize="20sp" />

                    <RelativeLayout
                        android:id="@+id/read_more_holder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/line_2"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:id="@+id/read_more"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/more_info"
                            android:textColor="@color/all_text_color"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:id="@+id/read_more_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@id/read_more"
                            android:contentDescription="@string/read_more"
                            android:src="@drawable/ic_play_circle_outline_black_24dp" />

                    </RelativeLayout>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>