<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foreground="?android:attr/selectableItemBackground"
    tools:context=".ARActivity">

    <fragment
        android:id="@+id/arFragment_model"
        android:name="com.google.ar.sceneform.ux.ArFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/races"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/human_m"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/human_m"
                app:civ_border_color="#FF000000"
                app:civ_border_width="0dp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/human_fm"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/human_fm"
                app:civ_border_color="#FF000000"
                app:civ_border_width="0dp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/giant"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/giant"
                app:civ_border_color="#FF000000"
                app:civ_border_width="0dp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/monkey"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/monkey"
                app:civ_border_color="#FF000000"
                app:civ_border_width="0dp" />

        </LinearLayout>

    </HorizontalScrollView>

    <Button
        android:id="@+id/more"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="20dp"
        android:background="@drawable/circle_btn_before"
        android:backgroundTint="@color/Main_color_1"
        android:backgroundTintMode="src_over"
        android:text="@string/btn_symbol"
        android:textColor="@color/ar_text"
        android:textSize="25sp" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/round_dialog"
        android:backgroundTint="#FFFFFF"
        android:paddingBottom="0dp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="15dp"
        app:layout_anchorGravity="bottom|center_horizontal"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/decoration_holder"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/round_dialog">

                <ImageView
                    android:id="@+id/decoration"
                    android:layout_width="150dp"
                    android:layout_height="5dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/round_btn"
                    android:backgroundTint="@color/Main_color_2"
                    android:contentDescription="@string/event_calendar_decoration" />

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/decoration_holder"
                app:cardCornerRadius="6dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/bottom_text"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/round_back_menu"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/demo_text"
                        android:textAlignment="center"
                        android:textColor="@color/all_text_color"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/bottom_text"
                        android:layout_marginTop="15dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/detail"
                        android:textAlignment="textStart"
                        android:textColor="@color/all_text_color"
                        android:textSize="16sp" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>